fixed spacing

--- a/www/inc/heimatradar/heimatradar.css
+++ b/www/inc/heimatradar/heimatradar.css
@@ -28,6 +28,10 @@ i.big {
   padding-top: 8px;
 }
 
+#table {
+  padding-bottom: 30px;
+}
+
 table {
   width: 100%;
   border: 1px solid #000000;
